The on screen keyboard on Windows 8+ should not obscure the input field.

The behavior we want is for the input field to scroll up when it
is obscured by the keyboard.

We attempt to mimic the behavior in Chrome OS where the viewport
is changed to the bounds of the OSK and the input field is
scrolled into the intersecting rectangle.

Added the following classes which live in ui\base\win\osk_display_manager.h/.cc

1. OnScreenKeyboardDisplayManager
2. OnScreenKeyboardDetector

These classes provide functionality to detect whether the
keyboard was displayed or hidden via a posted delayed task

They optionally notify observers who implement the OnScreenKeyboardObserver interface. The observers in turn can
detect if the keyboard is obscuring the view and can change the viewport and scroll the input field. This behavior is implemented by the OnScreenKeyboardObserver class which lives
in render_widget_host_view_aura.cc

BUG=608579
TEST=Partially covered by ui_base_unittest
OnScreenKeyboardTest.OSKPath

Review-Url: https://codereview.chromium.org/1986153005
Cr-Commit-Position: refs/heads/master@{#395754}

Former-commit-id: 4297d7d9e0cd33ac6673ec6a839b1501baabeba8