content/public/browser/render_widget_host_view.h
@@ -19,6 +19,7 @@
 class GURL;
 
 namespace gfx {
+class Point;
 class Rect;
 class Size;
 }
@@ -159,6 +160,14 @@ class CONTENT_EXPORT RenderWidgetHostView {
   // End subscribing for frame presentation events. FrameSubscriber will be
   // deleted after this call.
   virtual void EndFrameSubscription() = 0;
+
+  // Notification that a node was touched.
+  // The |location_dips_screen| parameter contains the location where the touch
+  // occurred in DIPs in screen coordinates.
+  // The |editable| parameter indicates if the node is editable, for e.g.
+  // an input field, etc.
+  virtual void FocusedNodeTouched(const gfx::Point& location_dips_screen,
+                                  bool editable) = 0;
 
 #if defined(OS_MACOSX)
   // Return the accelerated widget which hosts the CALayers that draw the
